<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tip_pct_10">10%</string>
    <string name="tip_pct_15">15%</string>
    <string name="tip_pct_20">20%</string>
    <string name="enter_amount">Amount:</string>
    <string name="calculated_tip">Tip:</string>

</resources>
