<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codepath.tipcalculator.MainActivity"
    tools:ignore="MergeRootFrame" >

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etAmount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/tip_pct_10"
            android:onClick="calculateTip10Pct" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_pct_15" 
            android:onClick="calculateTip15Pct" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_pct_20"
            android:onClick="calculateTip20Pct" />
    </RadioGroup>

    <EditText
        android:id="@+id/etTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup1"
        android:layout_below="@+id/radioGroup1"
        android:layout_marginTop="59dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup1"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/etTipAmount"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etTipAmount"
        android:layout_alignBottom="@+id/etTipAmount"
        android:layout_toLeftOf="@+id/etTipAmount"
        android:text="@string/calculated_tip"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etAmount"
        android:layout_alignBottom="@+id/etAmount"
        android:layout_alignRight="@+id/textView2"
        android:text="@string/enter_amount"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>